fix(board-task-card): card width gap fixed

--- a/src/app/board/board-task-card/board-task-card.scss
+++ b/src/app/board/board-task-card/board-task-card.scss
@@ -15,7 +15,7 @@
   padding: 16px;
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 16px;
   margin: 8px 0;
   cursor: pointer;
   position: relative;
@@ -26,8 +26,7 @@
 
   @media (max-width: 1024px) {
     margin: 0;
-    max-width: 270px;
-    min-width: 230px;
+    width: 250px;
 
     &:active {
       transform: none;
